<resources>
    <string name="app_name">Helping Hands Of CP</string>
    <string name="online_judge_info">Online judge info</string>
    <string name="resources">Resources</string>
    <string name="english_resource">English Resource</string>
    <string name="bangla_resource">Bangla Resource</string>
    <string name="programming">Programming</string>
    <string name="take_a_quiz_test">Take a Quiz Test</string>
    <string name="learn_new_topics">Learn New Topics</string>
    <string name="welcome_to_competitive_programming">Welcome to Competitive Programming</string>
    <string name="some_useful_links">Some Useful Links</string>
    <string name="developer">Developer</string>
    <string name="feedback">Feedback</string>
    <string name="textview">TextView</string>
    <string name="mohammad_hafiz_al_masud">Mohammad Hafiz-Al-Masud</string>
<string name="stl">
#
<a href="http://www.progkriya.org/gyan/stl.html">স্ট্যান্ডার্ড টেম্প্লেট লাইব্রেরী</a>
\n\n#
<a href="https://www.geeksforgeeks.org/the-c-standard-template-library-stl/">The C++ Standard Template Library (STL) - GeeksforGeeks</a>
\n\n#
<a href="https://www.studytonight.com/cpp/stl/stl-introduction">Standard Template Library in C++ Tutorial | Studytonight</a>
\n\n#
<a href="https://www.hackerearth.com/practice/notes/standard-template-library/">Standard Template Library | HackerEarth</a>
\n\n#
<a href="https://cal-linux.com/tutorials/STL.html">An Introduction to the C++ Standard Template Library (STL) - Cal-linux</a>
\n\n#
<a href="http://www.yolinux.com/TUTORIALS/LinuxTutorialC++STL.html">C++ STL Tutorial - YoLinux.com</a>
\n\n#
<a href="https://stackoverflow.com/questions/827236/what-is-the-stl">What is the STL? - Stack Overflow</a>
\n\n
</string>
    <string name="stl_resources">STL Resources</string>
<string name="beginners_guide">
#
<a href="http://www.shafaetsplanet.com/planetcoding/?p=1437">কেন আমি প্রোগ্রামিং শিখবো? | শাফায়েতের ব্লগ</a>
\n\n#
<a href="https://medium.com/programming-and-algorithms-iitr/competitive-programming-a-warm-up-66d0ce0bbaff">Competitive programming : A warm-up (Looking into the basics)</a>
\n\n#
<a href="https://www.hackerearth.com/practice/notes/getting-started-with-the-sport-of-programming/">Getting started with the sport of competitive programming | HackerEarth</a>
\n\n#
<a href="https://www.quora.com/How-do-I-learn-competitive-programming-as-a-beginner">How to learn competitive programming as a beginner - Quora</a>
\n\n#
<a href="https://shivamkhandelwal.in/beginners-guide-to-competitive-programming/">Beginners guide to Competitive programming - Shivam Khandelwal</a>
\n\n#
<a href="https://gist.github.com/sharmaeklavya2/5299a4cd059a6f6f8699">Getting started with Competitive Programming - GitHub Gist</a>
\n\n#
<a href="http://www.somewhereinblog.net/blog/ragibhasanblog/28911437">যন্ত্র গণকের যন্তর মন্তর - ১ - somewhere in blog</a>
\n\n#
<a href="http://www.somewhereinblog.net/blog/ragibhasanblog/28912341">যন্ত্র গণকের যন্তর মন্তর - ২ - somewhere in blog</a>
\n\n
</string>
    <string name="complexity_analysis">Complexity Analysis</string>
<string name="complexitylinks">
#
<a href="http://www.shafaetsplanet.com/planetcoding/?p=1313">অ্যালগরিদম কমপ্লেক্সিটি(বিগ “O” নোটেশন) | শাফায়েতের ব্লগ</a>
\n\n#
<a href="http://discrete.gr/complexity/">A Gentle Introduction to Algorithm</a>
\n\n#
<a href="http://pages.cs.wisc.edu/~vernon/cs367/notes/3.COMPLEXITY.html">Complexity and Big-O Notation</a>
\n\n#
<a href="https://www.quora.com/What-are-the-thumb-rules-used-by-competitive-programmers-to-check-if-their-solution-would-run-within-the-time-limit-or-not">What are the thumb rules used by competitive programmers to check if their solution would run within the time limit or not?</a>
\n\n#
<a href="https://codeforces.com/blog/entry/17799">How many operations per second can my solution be? - Codeforces</a>
\n\n
</string>
    <string name="starters_guide">Starters Guide</string>
    <string name="codeforces">Codeforces</string>
    <string name="codechef">Codechef</string>
    <string name="uva_online_judge">UVA Online Judge</string>
    <string name="at_coder">At Coder</string>
    <string name="cs_academy">CS Academy</string>
    <string name="hackerearth">HackerEarth</string>
    <string name="hackerrank">HackerRank</string>
    <string name="devskill">DevSkill</string>
    <string name="uri_online_judge">Uri Online Judge</string>
    <string name="a2_online_judge">A2 Online Judge</string>
    <string name="light_online_judge">Light Online Judge</string>
    <string name="sphere_online_judge">Sphere Online Judge</string>
    <string name="timus_online_judge">Timus Online Judge</string>
    <string name="few_bangla_blogs_on_programming">Few Bangla Blogs on Programming</string>
    <string name="some_competitive_programming_sites">Some Competitive Programming Sites</string>
    <string name="dawn_of_programming_contest">Dawn of Programming Contest</string>
<string name="ntintro">
#
<a href="http://www.progkriya.org/gyan/basic-number-theory.html">ন্যূনতম সংখ্যাতত্ত্ব</a>
\n\n
</string>
<string name="primelinks">
#
<a href="http://shoshikkha.com/archives/2332">প্রাইম জেনারেশন - সিভ অব Eratosthenes » স্বশিক্ষা</a>
\n\n#
<a href="http://www.shafaetsplanet.com/planetcoding/?p=624">প্রাইম জেনারেটর (Sieve of Eratosthenes) | শাফায়েতের ব্লগ</a>
\n\n#
<a href="http://www.shafaetsplanet.com/planetcoding/?p=855">বিটওয়াইজ্ সিভ(Bitwise sieve) | শাফায়েতের ব্লগ</a>
\n\n#
<a href="https://shikhorroy.wordpress.com/2013/01/06/wp-mep2mliv-1y/">ইরাটোস্থিনিসঃ পর্ব ০২ মৌলিক সংখ্যা - শিখরের ব্লগ</a>
\n\n#
<a href="https://returnzerooo.wordpress.com/2016/03/03/%E0%A6%AA%E0%A7%8D%E0%A6%B0%E0%A6%BE%E0%A6%87%E0%A6%AE-%E0%A6%B8%E0%A6%BF%E0%A6%AD-%E0%A6%AB%E0%A7%8D%E0%A6%AF%E0%A6%BE%E0%A6%95%E0%A7%8D%E0%A6%9F%E0%A6%B0/">প্রাইম জেনারেশন সিভ ও প্রাইম ফ্যাক্টরাইজেশন - return 0</a>
\n\n#
<a href="https://shikhorroy.wordpress.com/2013/04/13/wp-mep2mliv-3l/">প্রাইম নাম্বার চেকিং(ইউজিং সাইভ মেথড) - শিখরের ব্লগ</a>
\n\n#
<a href="http://lightoj.com/article_show.php?article=1001">Sieve of Eratosthenes (Generating Primes) - LightOJ</a>
\n\n#
<a href="http://lightoj.com/article_show.php?article=1002">Prime Factorization - LightOJ</a>
\n\n
</string>
<string name="divisor">
#
<a href="http://lightoj.com/article_show.php?article=1003">Finding Divisors, Number of Divisors and Summation of Divisors - LightOJ</a>
\n\n#
<a href="http://shoshikkha.com/archives/1069">সংখ্যাকে পেটানো! ( বিভাজক নির্ণয় ) » স্বশিক্ষা</a>
\n\n
</string>
<string name="modular_arithmetic">
#
<a href="http://www.shafaetsplanet.com/planetcoding/?p=936">মডুলার অ্যারিথমেটিক | শাফায়েতের ব্লগ</a>
\n\n#
<a href="https://mukitmkbs.wordpress.com/2014/09/30/big-mod/"> Big Mod - MUKIT09</a>
\n\n#
<a href="http://shoshikkha.com/archives/29"> রিকার্শনের মাধ্যমে মডুলার এক্সপনেন্সিয়েশন! - স্বশিক্ষা</a>
\n\n#
<a href="https://mukitmkbs.wordpress.com/2014/10/01/modular-multiplicative-inverse/"> Modular Multiplicative Inverse - MUKIT09</a>
\n\n#
<a href="https://comeoncodeon.wordpress.com/2011/10/09/modular-multiplicative-inverse/"> Modular Multiplicative Inverse - COME ON CODE ON</a>
\n\n#
<a href="http://cs.brown.edu/courses/cs007/modmult/node2.html"> Modular division via the multiplicative inverse of the denominator - Brown CS</a>
\n\n
</string>
<string name="comb">
#
<a href="http://shoshikkha.com/archives/4356"> ফাস্ট এক্সপনেনসিয়েশন! » স্বশিক্ষা</a>
\n\n#
<a href="http://www.shafaetsplanet.com/planetcoding/?p=600"> কম্বিনেটোরিক্স: অ্যারেঞ্জমেন্ট এবং ডি-রেঞ্জমেন্ট গণনা | শাফায়েতের ব্লগ</a>
\n\n
</string>
<string name="euclid">
#
<a href="http://subeen.com/%E0%A6%87%E0%A6%89%E0%A6%95%E0%A7%8D%E0%A6%B2%E0%A6%BF%E0%A6%A1%E0%A6%BF%E0%A7%9F%E0%A6%BE%E0%A6%A8-%E0%A6%85%E0%A7%8D%E0%A6%AF%E0%A6%BE%E0%A6%B2%E0%A6%97%E0%A6%B0%E0%A6%BF%E0%A6%A6%E0%A6%AE/"> ইউক্লিডিয়ান অ্যালগরিদম – সুবিন ডট কম</a>
\n\n#
<a href="https://returnzerooo.wordpress.com/2017/08/12/%E0%A6%8F%E0%A6%95%E0%A7%8D%E0%A6%B8%E0%A6%9F%E0%A7%87%E0%A6%A8%E0%A7%8D%E0%A6%A1%E0%A7%87%E0%A6%A1-%E0%A6%87%E0%A6%89%E0%A6%95%E0%A7%8D%E0%A6%B2%E0%A6%BF%E0%A6%A1%E0%A7%80%E0%A7%9F%E0%A6%BE%E0%A6%A8/"> এক্সটেন্ডেড ইউক্লিডীয়ান অ্যালগোরিদম - return 0</a>
\n\n
</string>
<string name="prob">
#
<a href="http://www.shafaetsplanet.com/?p=3060"> প্রোবাবিলিটি: এক্সপেক্টেড ভ্যালু | শাফায়েতের ব্লগ</a>
\n\n#
<a href="http://shakilcompetitiveprogramming.blogspot.com/2015/08/probability-expected-value-part-1.html">Shakil Ahmed\'s Blog : Probability and Expected value ( part - 1 )</a>
\n\n
</string>
<string name="nt_other">
#
<a href="http://shoshikkha.com/archives/1472">Ф ফাংশন (Euler\'s Phi Function) - Totient ফাংশন » স্বশিক্ষা</a>
\n\n#
<a href="http://www.progkriya.org/gyan/matrix-expo.html">ম্যাট্রিক্স এক্সপোনেনসিয়েশন</a>
\n\n#
<a href="https://rezwanarefin01.github.io/posts/fast-fourier-transform/">Fast Fourier Transform - Rezwan\'s CP Blog</a>
\n\n#
<a href="http://shoshikkha.com/archives/3487"> হিমালয়ের সমান ভাগফল,এক ডিজিটের ভাগশেষ - স্বশিক্ষা</a>
\n\n#
<a href="http://shoshikkha.com/archives/3510"> হিমালয়ের সমান ভাগফল,এক ডিজিটের ভাগশেষ - রিটার্নস! - স্বশিক্ষা</a>
\n\n#
<a href="http://www.math.mtu.edu/mathlab/COURSES/holt/dnt/">Discovering Number Theory</a>
\n\n
</string>
    <string name="about">About</string>
    <string name="contest_site">Contest Site</string>
    <string name="sheu">Name : Sheuly\nCore Designer and Developer\nCall:+8801907173056\nE-mail: sheulyakter333@gmail.com\n(12th Batch),\tDept. of CSE,ZHSUST</string>
    <string name="about_us">About Us</string>
    <string name="sir">Shudeb Babu Sen Omit\nChief Advisor\nCall: +8801767135034\nE-mail: omit.sen@gmail.com\nLecturer,Dept. of CSE,ZHSUST</string>
    <string name="Mijan">Name : Mijanur Rahman\nDesigner and Developer\nCall:+8801934863790\nE-mail: mijanurrahman511@gmail.com\n(12th Batch),\tDept. of CSE,ZHSUST</string>
    <string name="joy">Name : Mustafizul Alam Joy\nDesigner\nCall:+8801911922427\nE-mail: mostafijul.jhatpot@gmail.com\n(9th Batch),\tDept. of CSE,ZHSUST</string>
    <string name="rownok">Name : Nadira Rawnak\nDesigner\nCall:+8801737039469\nE-mail: rawnaknadira@gmail.com\n(9th Batch),\tDept. of CSE,ZHSUST</string>
</resources>