<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="1dp"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:background="@drawable/backgroundblack"
    android:paddingTop="1dp"
    tools:context="com.example.purnota.pending.MainActivity">

    <Button
        android:layout_marginTop="170sp"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/btn1"
       android:layout_centerHorizontal="true"
        android:text="Learn New Topic"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/btn2"
        android:layout_below="@id/btn1"
        android:layout_centerHorizontal="true"
        android:text="GuideLine For Beginner"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/btn3"
        android:layout_below="@id/btn2"
        android:layout_centerHorizontal="true"
        android:text="@string/online_judge_info"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/btn4"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn3"
        android:text="@string/resources"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/btn5"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn4"
        android:text="@string/contest_site" />

    <Button
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/btn6"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn5"
        android:text="@string/about" />

    <Button
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/btn7"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn6"
        android:text="Developer" />

</RelativeLayout>

