<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_developer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="1dp"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="1dp"
    android:background="@drawable/backgroundblack"
    tools:context="com.example.purnota.pending.Developer">


        <ImageView android:layout_height="75dp"
            android:layout_width="60dp"
            android:id="@+id/imageView1"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/imgMasud"
            android:src="@drawable/mijan"
            android:layout_alignStart="@+id/imgMasud"
            android:layout_alignLeft="@+id/imgMasud"/>


    <ImageView
            android:layout_height="75dp"
            android:layout_width="60dp"
            android:id="@+id/alamgirImage"
            android:src="@drawable/joy"
            android:layout_alignTop="@+id/alamgirText"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_alignStart="@+id/imageView1" />

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/alamgirText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0099ff"
            android:text="@string/joy"
            android:layout_marginTop="19dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="75dp"
            android:src="@drawable/rownak"
            android:id="@+id/sheu"

            android:layout_below="@+id/alamgirImage"
            android:layout_alignLeft="@+id/alamgirImage"
            android:layout_alignStart="@+id/alamgirImage"
            android:layout_marginTop="30dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:id="@+id/imgsir"
        android:src="@drawable/sir"
        android:layout_below="@+id/sheu"
        android:layout_alignLeft="@+id/sheu"
        android:layout_alignStart="@+id/sheu"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textsir"
        android:textColor="#ffffff"
        android:text="@string/sir"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_alignTop="@+id/imgsir"
        android:layout_alignLeft="@+id/textsheu"
        android:layout_alignStart="@+id/textsheu" />

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0099ff"
            android:text="@string/Mijan"
            android:textStyle="bold"
            android:textSize="14sp"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_toRightOf="@+id/imgMasud"
        android:layout_toEndOf="@+id/imgMasud" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView1"
        android:textColor="#0099ff"
        android:text="@string/sheu"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <ImageView
        android:layout_height="75dp"
        android:layout_width="60dp"
        android:id="@+id/imgMasud"
        android:src="@drawable/sheuly"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textsheu"
        android:textColor="#0099ff"
        android:text="@string/rownok"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_below="@+id/alamgirText"
        android:layout_alignLeft="@+id/alamgirText"
        android:layout_alignStart="@+id/alamgirText"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView7"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#77b300"
        android:text="@string/about_us"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
